[package]
name = "memap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
cranelift-codegen = "0.118.0"
cranelift-frontend = "0.118.0"
cranelift-jit = { version = "0.118.0", features = ["memmap2"] }
cranelift-module = "0.118.0"
libc = "0.2.172"
memap2 = "0.1.2"
memmap2 = "0.9.5"
raki = "1.3.1"
rand = "0.9.1"
target-lexicon = "0.13.2"
